# include_dir

include_dir/: Cargo.toml
include_dir/src/: compress.rs  dir.rs  dir_entry.rs  file.rs  lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
