[package]
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
name = "include_dir"
version = "0.7.3"
description = "Embed the contents of a directory in your binary"
license = "MIT"
readme = "README.md"
keywords = ["assets", "include", "embed", "dir"]
repository = "https://github.com/Michael-F-Bryan/include_dir"
categories = ["development-tools", "web-programming", "game-engines"]
edition = "2021"
rust-version = "1.56"

[dependencies]
glob = { version = "0.3", optional = true }
include_dir_macros = { version = "^0.7.0", path = "../macros" }
lz4-compression = { version = "0.7.0", optional = true }
once_cell = "1.16.0"
zstd = { version = "0.12.1", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["compression-lz4"]
nightly = ["include_dir_macros/nightly"]
metadata = ["include_dir_macros/metadata"]
compression-zstd = ["dep:zstd", "include_dir_macros/zstd"]
compression-lz4 = ["dep:lz4-compression", "include_dir_macros/lz4-compression"]

[package.metadata.docs.rs]
all-features = true
